<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Easy Reading</string>

    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_refresh">Refresh</string>
	<string name="action_about">About</string>

    <string name="pref_filename">nu.info.zeeshan.preference_file</string>
    <string name="pref_facebookrss">facebook_rss</string>
    <string name="pref_newsrss">news_rss</string>
    <string name="pref_limit">feed_limit</string>
    <string name="pref_update_interval">update_interval</string>
    
    <string name="pref_cat_facebook">Facebook</string>
    <string name="pref_cat_news">News</string>
    <string name="pref_cat_general">General</string>
    
    <string name="facebook_summary">Your Facebook notification RSS Feed</string>
    <string name="news_summary">Your News Rss Feed</string>
    <string name="limit_summary">Maximum feeds to keep of each type</string>
    <string name="update_interval_summary">How frequently you get updates</string>
    
    <string name="facebook_title">Facebook Feed</string>
    <string name="news_title">News Feed</string>
    <string name="limit_title">Maximum Feeds</string>
    <string name="update_interval_title">Update Interval (in Hours)</string>
    
    <string name="invalid_input">Entered value is not valid</string>
    
    <string name="bundle_arg_position">position</string>
    
    <string name="error_feed">Check RSS Feeds in settings</string>
    
    
    <string name="toast_msg_feednewsok">Loading News feeds\nFacebook feed is empty!</string>
    <string name="toast_msg_feedfbok">Updating Facebook feeds\nNews feed is empty!</string>
    <string name="toast_msg_bothfeedok">Updating News and Facebook feeds</string>
    <string name="toast_msg_nofeedok">Nothing to update News and Facebook feeds are empty!</string>
    <string name="toast_msg_read">Read</string>
    <string name="toast_msg_unread">Unread</string>
    <string name="toast_msg_all">All</string>
    <string name="toast_msg_error">Error occurred!!</string>
    <string name="toast_msg_updated">Update Successfully</string>
    <string name="toast_msg_wait">Waiting for last action to complete!</string>
    
   <string name="no_feeds_msg">No feeds Available!!\nCheck Settings and/or filter option</string>
   <string name="no_internet">Cannot connect to Internet</string>
   
    <string name="details">App Version 1.4.4\nDeveloped by Zeeshan Khan\n\u00A9 2014 Zeeshan Khan All Rights Reserved\n\nFork me on Github!\nhttp://github.com/zkhan93/EasyReading\n\nDeveloper Profile\nhttp://zkhan93.github.io\n\nYou Like it Then Rate it on Play Store!\n http://play.google.com/store/apps/details?id=nu.info.zeeshan.rnf</string>
   
</resources>
